Bug 338306 - Ledger search box doesn't support account hierarchy character ":"
Summary: Ledger search box doesn't support account hierarchy character ":"
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.4
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-08-15 19:44 UTC by BobSCA
Modified: 2019-08-29 00:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2,5.0.1
Sentry Crash Report:


Attachments
test case (28.07 KB, text/xml)
2018-03-01 15:26 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BobSCA 2014-08-15 19:44:07 UTC
When a hierarchical account/category is entered in the ledger search box no transactions are displayed.

Reproducible: Always

Steps to Reproduce:
1.Create a transaction with a hierarchical account or category, e.g. foo:bar 
2.Enter foo:bar in the ledger search box

Actual Results:  
No transactions are displayed

Expected Results:  
All transactions containing the text foo:bar, either in the category/account field or in another field, should be displayed.
Comment 1 Ralf Habacker 2017-08-13 18:43:50 UTC
The code searching for the entered filter is located in Transaction::matches().
Comment 2 Ralf Habacker 2017-11-18 15:07:08 UTC
Git commit 7e618064a3f1b66be776c1728d5c53638f84d26a by Ralf Habacker.
Committed on 14/11/2017 at 20:37.
Pushed by habacker into branch '4.8'.

Fix 'Ledger search box doesn't support account hierarchy character ":"'

Summary:
FIXED-IN:4.8.2

Test Plan: tested with branch 4.8

Reviewers: #kmymoney

Differential Revision: https://phabricator.kde.org/D8823

M  +14   -0    kmymoney/widgets/transaction.cpp

https://commits.kde.org/kmymoney/7e618064a3f1b66be776c1728d5c53638f84d26a
Comment 3 Ralf Habacker 2018-01-20 23:39:50 UTC
Git commit 7aacbd709b0fd1b8619dd7b53a44e993b37e5ea9 by Ralf Habacker
Committed on 18/11/2017 at 16:08
Pushed by habacker into branch '4.8'.

Revert "Fix 'Ledger search box doesn't support account hierarchy character ":"'"
    
This reverts commit 7e618064a3f1b66be776c1728d5c53638f84d26a.
https://commits.kde.org/kmymoney/7aacbd709b0fd1b8619dd7b53a44e993b37e5ea9
Comment 4 Ralf Habacker 2018-03-01 15:05:23 UTC
Git commit 9d5cd2c67d363d43ef9452b86006ee8ab0887752 by Ralf Habacker.
Committed on 01/03/2018 at 15:00.
Pushed by habacker into branch '4.8'.

Fix incorrect spelled variable name 'MyMoneyFile::AccountSeparator'

This change has been requested by Thomas Baumgart.

M  +2    -2    kmymoney/converter/mymoneyqifreader.cpp
M  +1    -1    kmymoney/converter/mymoneystatementreader.cpp
M  +1    -1    kmymoney/dialogs/kimportdlg.cpp
M  +1    -1    kmymoney/dialogs/knewaccountdlg.cpp
M  +2    -2    kmymoney/kmymoney.cpp
M  +7    -7    kmymoney/mymoney/mymoneyfile.cpp
M  +1    -1    kmymoney/mymoney/mymoneyfile.h
M  +2    -2    kmymoney/plugins/csvimport/csvutil.cpp
M  +4    -4    kmymoney/widgets/kmymoneyaccountcompletion.cpp
M  +3    -3    kmymoney/widgets/kmymoneyaccountselector.cpp

https://commits.kde.org/kmymoney/9d5cd2c67d363d43ef9452b86006ee8ab0887752
Comment 5 Ralf Habacker 2018-03-01 15:26:11 UTC
Created attachment 111113 [details]
test case
Comment 6 Ralf Habacker 2018-03-02 08:32:59 UTC
Git commit dc939f28e46b28f79fd774ab6c698c012f1535ea by Ralf Habacker.
Committed on 02/03/2018 at 08:32.
Pushed by habacker into branch '4.8'.

Fix 'Ledger search box doesn't support account hierarchy character ":"'
FIXED-IN:4.8.2

Test Plan: tested with branch 4.8

Reviewers: #kmymoney

Reviewed By: #kmymoney, tbaumgart

Subscribers: tbaumgart, wojnilowicz

Differential Revision: https://phabricator.kde.org/D8823

M  +14   -0    kmymoney/widgets/transaction.cpp

https://commits.kde.org/kmymoney/dc939f28e46b28f79fd774ab6c698c012f1535ea
Comment 7 Thomas Baumgart 2018-03-03 11:10:08 UTC
Git commit 887c69c41503a5083c0b8c545160a3173ca94c5d by Thomas Baumgart.
Committed on 03/03/2018 at 11:09.
Pushed by tbaumgart into branch '5.0'.

Fix 'Ledger search box doesn't support account hierarchy character ":"'

Test Plan: tested with branch 4.8 and 5.0

Reviewers: #kmymoney

Reviewed By: #kmymoney, tbaumgart

Subscribers: tbaumgart, wojnilowicz

Differential Revision: https://phabricator.kde.org/D8823

(based on commit dc939f28e46b28f79fd774ab6c698c012f1535ea)

M  +14   -0    kmymoney/widgets/transaction.cpp

https://commits.kde.org/kmymoney/887c69c41503a5083c0b8c545160a3173ca94c5d