Fix 'Ledger search box doesn't support account hierarchy character ":"'

Summary:
BUG:338306
FIXED-IN:4.8.2

Test Plan: tested with branch 4.8

Reviewers: #kmymoney

Differential Revision: https://phabricator.kde.org/D8823